objects/tffa__Reward__c.object
<CustomObject>
    <description>A reward is a commission paid to an agent/banker or customer of the financial institution (FI) for facilitating a transaction that benefits the FI. For agents a transaction includes bringing in new customers to the FI or selling financial products to existing customers of the FI. Agents may also be additionally rewarded for achieving overall sales goals/targets set by their managers or line of business. For customers a transaction includes bringing new customers to the FI via referrals. Rewards are meant to serve as an incentive to to motivate the facilitator of the transaction to keep selling products or providing referrals to the FI. Rewards can be of different types - credits, discounts, coupons, points, or even goodies like t-shirts, mugs, etc. Note: The reward object only tracks the rewards earned by agents/customers. But the fulfilment of these rewards (e.g. crediting the reward amount/points) is done by an external system (e.g. incentive compensation system, core banking, etc).</description>
    <fields>
        <fullName>tffa__Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agent who earned the reward.</description>
        <label>Agent</label>
        <referenceTo>tffa__AgentDetail__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Credits__c</fullName>
        <description>Reward value in credits (amount).</description>
        <formula>IF(ISPICKVAL(tffa__Type__c, &apos;CREDIT&apos;), tffa__Value__c, null)</formula>
        <label>Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A summarized description, meant to provide a quick overview about the reward.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__DiscountPercentage__c</fullName>
        <description>Reward value as a discount percentage offered on fees, etc.</description>
        <formula>IF(ISPICKVAL(tffa__Type__c, &apos;DISCOUNT&apos;), tffa__Value__c, null)</formula>
        <label>Discount percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRelatedToCurrentUser__c</fullName>
        <description>Indicates whether the reward is related to the current (contextual) User.</description>
        <formula>tffa__Agent__r.tffa__User__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Related to Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The party (customer) who earned the reward.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Points__c</fullName>
        <description>Reward value in points.</description>
        <formula>IF(ISPICKVAL(tffa__Type__c, &apos;POINT&apos;), tffa__Value__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ReferralCodeEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to referral code in case the source of the reward is a referral.</description>
        <label>Referral Code</label>
        <referenceTo>tffa__ReferralCode__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__SourceType__c</fullName>
        <description>The source of the reward.</description>
        <label>Source type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__RewardSourceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <defaultValue>&quot;ASSIGNED&quot;</defaultValue>
        <description>The current status of the reward.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__RewardStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>The type of the reward. This determines what fields are populated. e.g. credits field is populated for type credit, points for type point, discountPercentage for type discount.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__RewardType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>Reward value in credits (amount).</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Reward</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>tffa__MyReferralRewards</fullName>
        <columns>NAME</columns>
        <columns>tffa__ReferralCodeEntity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__IsRelatedToCurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>tffa__ReferralCodeEntity__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Referral Rewards</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>